--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "export": "next export"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^10.1.3",
     "autoprefixer": "^10.2.4",
     "next": "10.0.7",
     "postcss": "^8.2.6",
@@ -16,6 +18,7 @@
     "react-dom": "17.0.1",
     "react-elm-components": "^1.1.0",
     "react-responsive-carousel": "^3.2.12",
+    "remark-github": "^10.0.1",
     "tailwindcss": "^2.0.3"
   }
 }
