move login to the nextjs website

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "react-responsive-carousel": "^3.2.12",
     "remark-github": "^10.0.1",
     "tailwindcss": "^2.0.3"
+  },
+  "devDependencies": {
+    "typescript": "^4.4.3"
   }
 }
