--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "react-responsive-carousel": "^3.2.23",
     "remark-github": "^11.2.3",
     "tailwindcss": "^3.1.8"
+  },
+  "devDependencies": {
+    "@types/node": "18.8.0",
+    "typescript": "4.8.4"
   }
 }
