--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/node": "18.18.7",
+    "@types/react": "18.2.32",
     "prettier": "3.0.3",
     "typescript": "5.2.2"
   }
