--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next build && echo 'this command will be removed, just use next build'"
+    "export": "next build"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.0.0",
