--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prettier": "3.0.3",
     "typescript": "5.2.2"
   },
+  "packageManager": "yarn@1.22.19",
   "engines": {
     "node": ">=16",
     "yarn": "^1"
