--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,18 +1,18 @@
 ---
-    name: Lint
+    name: Build
     
     on:
       push:
-        branches:
-          - master
+        branches: ["master", "main"]
       pull_request:
+        branches: ["master", "main"]
     
     concurrency:
-      group: lint-${{ github.ref }}
+      group: build-${{ github.ref }}
       cancel-in-progress: true
     
     jobs:
-      lint:
+      build:
         runs-on: ubuntu-latest
 
         steps:
