--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
           cache: "yarn"
 
       - name: Run Cloudflare build
-        run: npx --yes @cloudflare/next-on-pages@1
+        run: yarn run cloudflare-build
 
       - name: Upload output files
         uses: actions/upload-artifact@v4
