--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next build"
+    "export": "next build",
+    "cloudflare-build": "npx @cloudflare/next-on-pages"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.0.0",
@@ -23,10 +24,12 @@
     "tailwindcss": "^3.2.1"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.8.2",
     "@types/node": "18.19.3",
     "@types/react": "18.2.45",
     "prettier": "3.1.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vercel": "^33.0.1"
   },
   "packageManager": "yarn@1.22.21",
   "engines": {
