--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next build",
-    "cloudflare-build": "npx @cloudflare/next-on-pages"
+    "cloudflare-build": "next-on-pages"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.0.0",
