--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,13 +13,13 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "components/chat/common.js"
+    "components/chat/common.js",
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
 }
