--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.0",
     "autoprefixer": "^10.4.13",
+    "mdast-util-find-and-replace": "^3.0.0",
     "next": "^14.0.0",
     "postcss": "^8.4.18",
     "react": "18.3.1",
