--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.3.1",
     "react-elm-components": "^1.1.0",
     "react-responsive-carousel": "^3.2.23",
+    "rehype-autolink-headings": "^7.1.0",
     "remark-custom-heading-id": "^2.0.0",
     "remark-github": "^12.0.0",
     "tailwindcss": "^3.2.1"
