--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^15.0.0",
-    "autoprefixer": "^10.4.13",
+    "@tailwindcss/postcss": "^4.0.0",
     "mdast-util-find-and-replace": "^3.0.0",
     "next": "^15.0.0",
     "postcss": "^8.4.18",
